themesdefdir   = @THEMES_DIR@/default
themesdef_DATA = default/no_cover.png \
	default/intro.svg \
	default/songs_bg.svg \
	default/songs_order.svg \
	default/songs_song.svg \
	default/sing_bg.svg \
	default/sing_lyricscurrent.svg \
	default/sing_lyricshighlight.svg \
	default/sing_lyricsnext.svg \
	default/sing_p1box.svg \
	default/sing_p1score.svg \
	default/sing_p2box.svg \
	default/sing_p2score.svg \
	default/sing_progressfg.svg \
	default/sing_tostartfg.svg \
	default/sing_timetxt.svg \
	default/practice_bg.svg

themeslimadir   = @THEMES_DIR@/lima
themeslima_DATA = lima/no_cover.png \
	lima/intro.svg \
	lima/songs_bg.svg \
	lima/songs_order.svg \
	lima/songs_song.svg \
	lima/sing_bg.svg \
	lima/sing_lyricscurrent.svg \
	lima/sing_lyricshighlight.svg \
	lima/sing_lyricsnext.svg \
	lima/sing_p1box.svg \
	lima/sing_p1score.svg \
	lima/sing_p2box.svg \
	lima/sing_p2score.svg \
	lima/sing_progressfg.svg \
	lima/sing_tostartfg.svg \
	lima/sing_timetxt.svg \
	lima/practice_bg.svg

EXTRA_DIST = $(themesdef_DATA) $(themeslima_DATA)
