
themeslimadir   = @THEMES_DIR@/lima
themeslima_DATA = lima/icon.png \
	lima/no_cover.svg \
	lima/notelines.svg \
	lima/intro.svg \
	lima/songs_bg.svg \
	lima/songs_order.svg \
	lima/songs_song.svg \
	lima/sing_bg.svg \
	lima/sing_lyricscurrent.svg \
	lima/sing_lyricshighlight.svg \
	lima/sing_lyricsnext.svg \
	lima/sing_p1box.svg \
	lima/sing_p1score.svg \
	lima/sing_p2box.svg \
	lima/sing_p2score.svg \
	lima/sing_progressfg.svg \
	lima/sing_tostartfg.svg \
	lima/sing_timetxt.svg \
	lima/practice_bg.svg \
	lima/practice_txt.svg \
	lima/practice_note.svg \
	lima/practice_sharp.svg \
	lima/practice_peak.svg \
	lima/score_bg.svg \
	lima/score_rank.svg \
	lima/score_level.svg \
	lima/score_txt.svg \
	lima/configuration_bg.svg \
	lima/configuration_item.svg \
	lima/configuration_value.svg \
	lima/wave.png \
	lima/notebar.svg \
	lima/notebar.png \
	lima/menu.ogg

EXTRA_DIST = $(themeslima_DATA)
